<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.businesscard.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:text="@string/brokencode"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ImageSwitcher
        android:id="@+id/image_switcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageButton
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@null"
        android:onClick="nextImage"
        android:src="@drawable/keyboard_arrow_right" />

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp"
            android:text="@string/generativeDesign"
            android:textColor="#808080"
            android:textSize="18sp" />

        <com.example.android.businesscard.VerticalTextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="38dp"
            android:layout_marginTop="8dp"
            android:layout_below="@id/text1"
            android:gravity="bottom"
            android:text="@string/algorithmicArt"
            android:textColor="#606060"
            android:textSize="18sp"
        />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="10dp"
            android:layout_toLeftOf="@id/text2"
            android:text="@string/facebook"
            android:textColor="#404040"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text4"
            android:layout_toLeftOf="@id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text3"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/mail"
            android:textColor="#404040"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text4"
            android:layout_toLeftOf="@id/text2"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/city"
            android:textColor="#404040"
            android:textSize="18sp"
            />
    </RelativeLayout>
</LinearLayout>
